<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.sciencequiz.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/space_comet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc12"
            android:src="@drawable/quiz12" />

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz12"
            android:textAllCaps="false"
            android:textSize="@dimen/font_sizeSmall" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
            android:background="@color/grayLight"
            android:checked="false"
            android:text="@string/quiz12_1" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
            android:background="@color/grayLight"
            android:checked="false"
            android:text="@string/quiz12_2" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
            android:background="@color/grayLight"
            android:checked="false"
            android:text="@string/quiz12_3" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grayLight"
            android:checked="false"
            android:text="@string/quiz12_4" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/quiz12_5" />


        <!-- TextView 1 include file -->
        <include layout="@layout/include_textview1" />

        <!-- RelativeLayout include file -->
        <include layout="@layout/include_relativelayout" />

        <!-- Button include file -->
        <include layout="@layout/include_button" />

    </LinearLayout>

</ScrollView>