<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.sciencequiz.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/space_comet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc10"
            android:src="@drawable/quiz10" />

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz10"
            android:textAllCaps="false"
            android:textSize="@dimen/font_sizeSmall" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_marginLeft_textview"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
                android:background="@color/grayLight"
                android:text="@string/quiz10_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
                android:background="@color/grayLight"
                android:text="@string/quiz10_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/radioButton_layoutMarginBottom"
                android:background="@color/grayLight"
                android:text="@string/quiz10_3" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grayLight"
                android:text="@string/quiz10_4" />
        </RadioGroup>

        <!-- TextView 1 include file -->
        <include layout="@layout/include_textview1" />

        <!-- RelativeLayout include file -->
        <include layout="@layout/include_relativelayout" />

        <!-- Button include file -->
        <include layout="@layout/include_button" />

    </LinearLayout>

</ScrollView>