<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.sciencequiz.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/space_comet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/desc7"
            android:src="@drawable/quiz7" />

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quiz7"
            android:textAllCaps="false"
            android:textSize="@dimen/font_sizeSmall" />

        <EditText
            android:id="@+id/editTextBox"
            android:layout_width="@dimen/layout_widthSmall"
            android:layout_height="@dimen/layout_heightSmall"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/quiz7_2"
            android:inputType="text"
            android:maxLength="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:text="@string/quiz7_1" />

        <!-- TextView 1 include file -->
        <include layout="@layout/include_textview1" />

        <!-- RelativeLayout include file -->
        <include layout="@layout/include_relativelayout" />

        <!-- Button include file -->
        <include layout="@layout/include_button" />

    </LinearLayout>

</ScrollView>