<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.android.sciencequiz.Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_marginBottomSmall"
        android:layout_marginLeft="@dimen/layout_marginLeft"
        android:layout_marginRight="@dimen/layout_marginRight"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_layout_marginBottom"
            android:text="@string/quiz13"
            android:textSize="@dimen/font_size"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_marginBottomVSmall"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/paddingRight_textviewMed"
                android:text="@string/quiz13_1"
                android:textSize="@dimen/font_size" />

            <TextView
                android:id="@+id/scoreCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginBottomVNarrow"
                android:layout_toRightOf="@+id/scoreTextView"
                android:text="0/0"
                android:textSize="@dimen/font_size" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/layout_marginTopSmall"
            android:contentDescription="@string/desc13"
            android:scaleType="centerCrop"
            android:src="@drawable/graph" />

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_marginBottomVNarrow"
            android:gravity="center"
            android:text="@string/quiz13_2"
            android:textSize="@dimen/font_sizeSmall" />

        <TextView
            android:id="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_marginBottom"
            android:gravity="center"
            android:text="@string/quiz13_3"
            android:textSize="@dimen/font_sizeVSmall" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/layout_marginBottomVNarrow"
            android:gravity="center">


            <CheckBox
                android:id="@+id/checkbox_id1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz13_4"
                android:textSize="@dimen/font_sizeSmall" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_marginLeft_Med"
            android:layout_marginTop="@dimen/layout_marginTopLg"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clickButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_marginBottomVSmall"
                android:background="@color/grayDark"
                android:text="End"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_sizeMedium" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
